tests/error/misc_errors/custom_no_signature.py
from guppylang.decorator import guppy


@guppy.custom()
def foo(x): ...


foo.compile()
